# MotorControl

MainPositionCntrl/: CMakeLists.txt  MainCode.cpp
PositionMotor/: CMakeLists.txt  Makefile  cmake_install.cmake
PositionMotor/include/: Comms.h  MessageData.h  PositionServoMotor.h
PositionMotor/src/: CMakeLists.txt  Comms.cpp  Makefile  PositionMotor.cpp  PositionServoMotor.cpp  ReceiveData  ReceiveDataServer.cpp  Task.cpp  cmake_install.cmake
UltraSonicSensor/: CMakeCache.txt  CMakeLists.txt  Makefile  SensorCommsServer.cpp  SensorCommsServer.h  SensorServer  SensorServer.cpp  UltraSonicSensor  UltraSonicSensorMain.cpp  cmake_install.cmake
UltraSonicSensor/Comms/: CMakeLists.txt  Client.cpp  Comms.cpp  Makefile  Task.cpp  cmake_install.cmake
UltraSonicSensor/Sensor/: CMakeLists.txt  LcdDisplay.cpp  LcdDisplay.h  Makefile  Sensor.cpp  Sensor.h  StepperMotor.cpp  StepperMotor.h  UltraSonicDataMessage.h  cmake_install.cmake
UltraSonicSensor/include/: Client.h  Comms.h  MessageData.h  ServoDataMessage.h  Task.h
